# pandas_practice

./: .pre-commit-config.yaml  Makefile  pyproject.toml
infrastructure/: dev.yml
infrastructure/docker/python/: Dockerfile
src/: enums.py
src/data_loader/: base_data_loader.py
src/export/: base_exporter.py
src/operators/: run_transactions.py
src/pandas_practice/: pandas_practice.py
src/transformers/: base_transformer.py
src/utils/: logger.py  parser.py
